# TorchFFN

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  dependabot.yml  docker.yml  release.yml
examples/: basic_usage.py
torchffn/: __init__.py
torchffn/configs/: ffn_cremi_baseline.yaml  ffn_small.yaml  infer_cremi.yaml
torchffn/inference/: __init__.py  engine.py  tiler.py
torchffn/metrics/: __init__.py  segmentation.py
torchffn/models/: __init__.py  ffn3d.py
torchffn/scripts/: ffn_benchmark.py  ffn_infer.py  ffn_train.py
torchffn/tests/: __init__.py  test_inference.py  test_models.py
torchffn/training/: __init__.py  loop.py  losses.py
